@@ -10,7 +10,7 @@ It's a regular Django-project, so just start it
 
 go to http://127.0.0.1:8000/ and look it...
 
-Warn: tested on Django 0.95, 0.96, 1.0 and 1.1pre-alpha
+Warn: tested on Django 1.0, 1.2, 1.3.
 
 ------------------------------------
 
@@ -18,7 +18,7 @@ Warn: tested on Django 0.95, 0.96, 1.0 and 1.1pre-alpha
 ====================================
 
 Чтобы запустить примеры, Вам понадобятся установленные 
-Django (версии 0.95 и выше) и pytils.
+Django (версии 1.0 и выше) и pytils.
 
 Это обычный Django-проект. Запускайте 
 
@@ -26,4 +26,4 @@ Django (версии 0.95 и выше) и pytils.
 
 заходите браузером на http://127.0.0.1:8000/ и смотрите...
 
-Внимание: протестировано на Django версий 0.95, 0.96, 1.0 и 1.1pre-alpha
+Внимание: протестировано на Django версий 1.0, 1.2, 1.3.
