@@ -47,7 +47,7 @@
 </ul>
 </p>
 
-<p>Протестировано с Django 0.95, 0.96, 1.0 и 1.1pre-alpha на Python 2.4.x и 2.5.x</p>
+<p>Протестировано с Django 1.0, 1.2, 1.3 на Python 2.7</p>
 <p>Данный пример работает с Django {{ params.django_version }} на Python {{ params.python_version }} с использованием pytils {{ params.pytils_version }}.</p>
 
 {% endblock %}
