@@ -5,55 +5,44 @@ pytils.translit templatetags for Django web-framework
 """
 
 from django import template, conf
+from django.utils.encoding import smart_unicode
 from pytils import translit
-from pytils.templatetags import pseudo_str, pseudo_unicode, init_defaults
+from pytils.templatetags import init_defaults
 
 register = template.Library()  #: Django template tag/filter registrator
-encoding = conf.settings.DEFAULT_CHARSET  #: Current charset (sets in Django project's settings)
 debug = conf.settings.DEBUG  #: Debug mode (sets in Django project's settings)
+encoding = conf.settings.DEFAULT_CHARSET  #: Current charset (sets in Django project's settings)
 show_value = getattr(conf.settings, 'PYTILS_SHOW_VALUES_ON_ERROR', False)  #: Show values on errors (sets in Django project's settings)
 
 default_value, default_uvalue = init_defaults(debug, show_value)
 
 # -- filters --
 
-def translify(stext):
+def translify(text):
     """Translify russian text"""
     try:
-        utext = pseudo_unicode(
-                        stext,
-                        encoding,
-                        default_value)
-        res = translit.translify(utext)
+        res = translit.translify(smart_unicode(text, encoding))
     except Exception, err:
         # because filter must die silently
-        res = default_value % {'error': err, 'value': stext}
+        res = default_value % {'error': err, 'value': text}
     return res
 
-def detranslify(stext):
+def detranslify(text):
     """Detranslify russian text"""
     try:
-        ures = translit.detranslify(stext)
-        res = pseudo_str(
-                ures,
-                encoding,
-                default_uvalue)
+        res = translit.detranslify(text)
     except Exception, err:
         # because filter must die silently
-        res = default_value % {'error': err, 'value': stext}
+        res = default_value % {'error': err, 'value': text}
     return res
 
-def slugify(stext):
+def slugify(text):
     """Make slug from (russian) text"""
     try:
-        utext = pseudo_unicode(
-                stext,
-                encoding,
-                default_value)
-        res = translit.slugify(utext)
+        res = translit.slugify(smart_unicode(text, encoding))
     except Exception, err:
         # because filter must die silently
-        res = default_value % {'error': err, 'value': stext}
+        res = default_value % {'error': err, 'value': text}
     return res
 
 # -- register filters
